# PDFMathTranslate

./: README.md  pyproject.toml
.github/workflows/: docker-image.yml
pdf2zh/: translator.py
