[project]
name = "pdf2zh"
version = "1.9.11"
description = "Latex PDF Translator"
authors = [{ name = "Byaidu", email = "byaidux@gmail.com" }]
license = "AGPL-3.0"
readme = "README.md"
requires-python = ">=3.10,<3.13"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "requests",
    # for arm64 linux whells
    "pymupdf<1.25.3",
    "tqdm",
    "tenacity",
    "numpy",
    "ollama",
    "xinference-client",
    "deepl",
    "openai",
    "azure-ai-translation-text",
    # 5.36 has a bug, webui starts with a white screen
    "gradio<5.36",
    "huggingface_hub",
    "onnx",
    "onnxruntime",
    "opencv-python-headless",
    "tencentcloud-sdk-python-tmt",
    "pdfminer-six==20250416",
    "gradio_pdf",
    "pikepdf",
    "peewee",
    "fontTools",
    "babeldoc<0.3.0",
    "rich",
    "argostranslate",
    "flask",
    "celery",
    "redis",
    "mcp",
]

[dependency-groups]
dev = [
    "black",
    "flake8",
    "pre-commit",
    "pytest",
    "build",
    "bumpver",
]

[project.urls]
Homepage = "https://bgithub.xyz/Byaidu/PDFMathTranslate"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
pdf2zh = "pdf2zh.pdf2zh:main"

[tool.flake8]
ignore = ["E203", "E261", "E501", "W503", "E741"]
max-line-length = 88

[bumpver]
current_version = "1.9.11"
version_pattern = "MAJOR.MINOR.PATCH[.PYTAGNUM]"

[bumpver.file_patterns]
"pyproject.toml" = [
    'current_version = "{version}"',
    'version = "{version}"'
]
"pdf2zh/__init__.py" = [
    '__version__ = "{version}"'
]
